--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/seantrinh/ratemydrinks/issues"
   },
-  "homepage": "https://github.com/seantrinh/ratemydrinks#readme"
+  "homepage": "https://github.com/seantrinh/ratemydrinks#readme",
+  "dependencies": {
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
+    "mongodb": "^3.2.3"
+  }
 }
