--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
+    "express-session": "^1.16.1",
     "mongodb": "^3.2.3"
   }
 }
