--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.16.1",
-    "mongodb": "^3.2.3"
+    "mongodb": "^3.2.3",
+    "multer": "^1.4.1"
   }
 }
