--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^3.0.2",
     "express-session": "^1.16.1",
     "mongodb": "^3.2.4",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "seed": "^0.4.4"
   }
 }
